--- a/starbucks.html
+++ b/starbucks.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="all.min.css">
     <link rel="stylesheet" href="starbucks.css">
-    <title>Starbucks Coffee Company of Manpreet, Nitish</title>
+    <title>Starbucks Coffee Company </title>
   </head>
   <body>
     <header>
